--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -10,7 +10,7 @@
         </div>
         <div *ngIf="isLoggedIn || gameMode != 'REAL'" class="buttons-game-view">
             <ng-container>
-                <a class="btn-cassino screen-adjust" (click)="openFullscreen()"><i class="fa fa-expand"></i></a>
+                <a class="btn-cassino screen-adjust" (click)="openFullScreenMob()"><i class="fa fa-expand"></i></a>
             </ng-container>
             <a (click)="back()" class="btn-cassino game-close"><i class="fa fa-times"></i></a>
         </div>
