Hotfix: adicionado de volta o campo de telefone no cadastro da loterj

--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" *ngIf="!isLoterj">
+            <div class="row">
                 <div class="col-md-12">
                     <div class="form-group mb-4">
                         <div class="input-md">
