Fix: menu-conta com espaçamento, modal cancelar cadastro sem cor de background e ajuste de espaçamento em modais

--- a/src/app/clientes/financeiro/financeiro.component.css
+++ b/src/app/clientes/financeiro/financeiro.component.css
@@ -79,6 +79,10 @@
         position: relative;
     }
 
+    .mobile-modal-header{
+        margin: 1em 0;
+    }
+
     .filtros {
         flex-direction: column;
         gap: 20px;
