--- a/src/app/clientes/promocao/promocao.component.css
+++ b/src/app/clientes/promocao/promocao.component.css
@@ -205,7 +205,7 @@
 
     #default-content {
         padding: 10px;
-        height: 100vh;
+        height: 100%;
         overflow: auto;
         position: relative;
     }
