--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -615,6 +615,8 @@ body .change-theme {
         max-height: 100%;
         transform: none !important;
         position: fixed !important;
+        border: none;
+        border-radius: 0;
         width: 100%;
         overflow: auto;
     }
