--- a/src/styles.css
+++ b/src/styles.css
@@ -1731,7 +1731,7 @@ ngb-datepicker-month {
     .modal-login{
         z-index: 90002 !important;
     }
-    
+
     .modal-cadastro-cliente {
         z-index: 90002 !important;
     }
@@ -1950,4 +1950,8 @@ label {
         height: 100%;
         margin: 0;
     }
+}
+
+.webpush-swal2-popup .webpush-swal2-modal .webpush-swal2-show {
+    background: none !important;
 }
