--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -1,3 +1,175 @@
+.card-info-game-name {
+    font-size: 16px;
+    font-weight: 600;
+    margin-top: 6px;
+    margin-bottom: 0;
+}
+
+.provider-container {
+    position: relative;
+}
+
+.game-list {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    -ms-overflow-style: none;
+    scrollbar-width: none; 
+}
+
+.game-list::-webkit-scrollbar {
+    display: none;
+}
+
+.game-list-inline {
+    flex-wrap: nowrap;
+    overflow: scroll;
+    scroll-behavior: smooth;
+}
+
+.provider-list {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.provider-list::-webkit-scrollbar {
+    display: none;
+}
+
+.provider-list-inline {
+    flex-wrap: nowrap;
+    overflow: scroll;
+    scroll-behavior: smooth;
+}
+
+.provider-list-inline {
+    flex-wrap: nowrap;
+    overflow: scroll;
+    scroll-behavior: smooth;
+}
+
+.empty-game-list {
+    color: var(--foreground-header);
+    opacity: 0.5;
+}
+
+.more-games-fade {
+    position: absolute;
+    width: 50px;
+    height: calc(100% + 20px);
+    top: -10px;
+    transition: opacity 0.5s;
+}
+
+.more-games-fade-right {
+    background-image: linear-gradient(to left, rgba(var(--background-rgb), 1) 25%, rgba(var(--background-rgb), 0.01));
+    right: 0;
+    opacity: 1;
+}
+
+.more-games-fade-left {
+    background-image: linear-gradient(to right, rgba(var(--background-rgb), 1) 25%, rgba(var(--background-rgb), 0.01));
+    left: 0;
+    opacity: 0;
+}
+
+.social-buttons-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+}
+
+.social-buttons{
+    width: 24px;
+    height: 24px;
+    margin-top: 8px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.social-buttons:hover {
+    opacity: 0.7;
+}
+
+.whatsapp {
+    fill: #24CC63;
+    margin-left: 0;
+    background-color: rgba(36, 204, 99, 0.20);;
+    background-image: url('https://cdn.wee.bet/img/icons/whatsapp.svg'); 
+    background-size: 58%;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  
+.facebook {
+    fill: #395694;
+    background-color: rgba(57, 86, 148, 0.20);
+    background-image: url('https://cdn.wee.bet/img/icons/facebook.svg');
+    background-size: 36%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.telegram {
+    fill: #2FA3D4;
+    background-color: rgba(47, 163, 212, 0.20);;
+    background-image: url('https://cdn.wee.bet/img/icons/telegram.svg');
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.copy {
+    fill: #FFF;
+    background-color: rgba(255, 255, 255, 0.20);
+    background-image: url('https://cdn.wee.bet/img/icons/copy.svg');
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-right: 0;
+}
+
+@media only screen and (max-width: 1024px) {
+    .provider-list {
+        flex-wrap: nowrap;
+        overflow: scroll;
+        scroll-behavior: smooth;
+    }
+
+    .game-list {
+        flex-wrap: nowrap;
+        overflow: scroll;
+        scroll-behavior: smooth;
+    }
+
+    .more-games-fade-right {
+        background-image: linear-gradient(to left, rgba(var(--background-rgb), 1) 10%, rgba(var(--background-rgb), 0.01));
+        right: -2px;
+    }
+
+    .more-games-fade-left {
+        background-image: linear-gradient(to right, rgba(var(--background-rgb), 1) 10%, rgba(var(--background-rgb), 0.01));
+    }
+
+    .more-games-fade {
+        height: calc(100% + 10px);
+        top: 0;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .game-list,
+    .provider-list {
+        gap: 15px;
+    }
+}
 
 @media (max-width: 482px) {
 
@@ -16,11 +188,11 @@
         overflow: auto;
         display: flex;
         flex-direction: column;
+        margin-bottom: 10px;
     }
 
     .game-view-mobile {
         width: 100%;
-        z-index: 10000;
         height: 100%;
     }
 
@@ -63,7 +235,7 @@
     .card-small {
         width: 350px;
         height: auto;
-        margin: auto;
+        margin: 24px auto;
         position: relative;
         border-radius: 8px;
         overflow: hidden;
@@ -73,7 +245,6 @@
         flex-direction: column;
         align-items: center;
         padding: 20px 30px;
-        margin-top: 2em;
     }
 
     .card-content {
@@ -170,6 +341,10 @@
         padding: 10px 20px;
         font-size: 16px;
     }
+
+    .bloco {
+        padding: 0 10px 24px 10px
+    }
 }
 
 @media (min-width: 483px){
@@ -207,10 +382,10 @@
 
     .game-frame {
         width: 100%;
-        margin: 0 auto;
-        height: calc(100vh);
+        margin: 0 20px;
+        margin-bottom: 40px;
+        height: 790px;
     }
-
 
     .aviso{
         display: flex;
@@ -255,8 +430,8 @@
 
     iframe{
         width: 100%;
+        height: 100%;
         border:none;
-        height: 70%;
     }
 
     .header-game-view {
@@ -266,6 +441,7 @@
         border-radius: 4px 4px 0px 0px;
         background-color: #0A0A0A;
         border: none;
+        margin: 0 20px;
     }
     .header-game-view > div {
         flex-grow: 1;
@@ -326,54 +502,31 @@
     }
 
     .overlay {
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        display: -webkit-box;
-        display: -ms-flexbox;
+        overflow: hidden;
         display: flex;
-        height: 100%;
+        align-items: center;
         justify-content: center;
-        position: absolute;
-        top: 0;
+        height: 100%;
         width: 100%;
-        margin-top: 11em;
+        position: relative;
     }
 
     .overlay-background {
-        background-position: 50%;
-        background-repeat: no-repeat;
-        background-size: auto 100%;
-        height: calc(100% - 80px);
         position: absolute;
-        top: 40px;
-        width: 100%;
-        filter: blur(30px);
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: blur(60px);
     }
-
-    .overlay .overlay-content {
-
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        height: 100%;
-        justify-content: center;
+    
+    .overlay-content {
         position: relative;
-        width: 100%;
-        z-index: 1
     }
-
+    
     .overlay-content__title {
         color: #FFF;
         text-align: center;
@@ -384,7 +537,7 @@
         line-height: normal;
         margin-bottom: 20px;
     }
-
+    
     .overlay-content__text {
         color: rgba(255, 255, 255, 0.50);
         text-align: center;
@@ -443,4 +596,17 @@
         color: white;
     }
 
+    .bloco {
+        position: relative;
+        padding: 0 20px 24px 20px;
+        margin: 0 auto;
+        width: 100%;
+    }
+    
+    .bloco .titulo {
+        text-align: left;
+        font-size: 18px;
+        color: var(--foreground-header);
+        flex-grow: 1;
+    }
 }
