--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -3,6 +3,7 @@
 #app {
   width: 100%;
   height: 100vh;
+  background: #0a0a0a;
   background: var(--color-background);
 }
 
@@ -17,7 +18,9 @@
 
 body {
   min-height: 100vh;
+  color: #ffffff;
   color: var(--color-text);
+  background: #0a0a0a;
   background: var(--color-background);
   margin: 0;
   padding: 0;
