--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,12 +1,15 @@
-
 /* semantic color variables for this project */
 :root {
-  --color-background: #0a0a0a;
+  // --color-background: #0a0a0a;  
   --color-primary: #0be58e;
   --color-text: #ffffff;
   --color-text-input: #ffffff80;
   --color-background-input: #181818;
+  --foreground-highlight: #181818;
   --color-success: #6da544;
-  --color-danger: #f61a1a;
+  // --color-danger: #f61a1a;
+  --wb-warning: #f61a1a;
   --color-warning: #c09516;
+  --inputs-odds: #003566;
+  // --inputs-odds
 }
