--- a/src/app/shared/layout/modals/login-modal/login-modal.component.html
+++ b/src/app/shared/layout/modals/login-modal/login-modal.component.html
@@ -31,15 +31,15 @@
                      <input type="text" id="username" class="form-control inverted-out"
                            formControlName="username"
                            [ngClass]="applyCssInputError('username')"
-                           [attr.maxlength]="form.get('loginMode').value === 'phone' ? '15' : null"
-                           [mask]="form.get('loginMode').value === 'phone' ? '(00) 00000-0000' : null"
+                           [attr.maxlength]="loginMode === 'phone' ? '15' : null"
+                           [mask]="loginMode === 'phone' ? '(00) 00000-0000' : null"
                            [dropSpecialCharacters]="false"
-                           [style.paddingLeft]="form.get('loginMode').value === 'phone' ? '44px' : null"
+                           [style.paddingLeft]="loginMode === 'phone' ? '44px' : null"
 
                     />
-                    <label for="username">{{ form.get('loginMode').value === 'phone' ? ('geral.loginPhone' | translate) : 'E-mail' }}</label>
+                    <label for="username">{{ loginMode === 'phone' ? ('geral.loginPhone' | translate) : ('geral.loginEmail' | translate) }}</label>
                 </div>
-                <app-error-msg [control]="form.get('username')" label="{{ form.get('loginMode').value === 'phone' ? ('geral.loginPhone' | translate) : 'E-mail' }}" class="text-left"></app-error-msg>
+                <app-error-msg [control]="form.get('username')" label="{{ loginMode === 'phone' ? ('geral.loginPhone' | translate) : ('geral.loginEmail' | translate) }}" class="text-left"></app-error-msg>
             </div>
 
             <div class="form-group" [ngClass]="applyCssDivError('password')">
