feat: paleta de cores

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,15 +1,20 @@
 /* semantic color variables for this project */
 :root {
-  // --color-background: #0a0a0a;  
+  // --color-background: #0a0a0a;
   --color-primary: #0be58e;
   --color-text: #ffffff;
   --color-text-input: #ffffff80;
   --color-background-input: #181818;
   --foreground-highlight: #181818;
-  --color-success: #6da544;
-  // --color-danger: #f61a1a;
-  --wb-warning: #f61a1a;
-  --color-warning: #c09516;
   --inputs-odds: #003566;
+  --league: #001d3d;
+  --game: #001d3d;
+  --highlight: #ca7d40;
+  --header: #001d3d;
+  --background: #021126;
+  --color-success: #6da544;
+  --color-danger: #f61a1a;
+  --color-warning: #c09516;
+  // --wb-warning: #f61a1a;
   // --inputs-odds
 }
