--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -138,7 +138,12 @@
     margin-right: 0;
 }
 
-@media only screen and (max-width: 1024px) {
+.close-modal-continuar-jogando i{
+    color: var(--highlight);
+    font-size: medium;
+}
+
+@media only screen and (min-width:482px) and (max-width: 1024px) {
     .provider-list {
         flex-wrap: nowrap;
         overflow: scroll;
@@ -173,17 +178,57 @@
         top: 0;
     }
 
-    .btn#deposit-btn{
-        background-color: var(--highlight);
-        color: var(--foreground-highlight);
-        width: 82px;
-        height: 23px !important;
-        padding: 10px 7px;
-        text-align: center;
-        margin: auto 0;
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 500;
+    .header-game-view {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        background-color: #000;
+        color: #fff;
+        margin: 0;
+    }
+
+    .game-view {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10px;
+    }
+
+    .game-view-mobile {
+        width: 100%;
+        height: 100%;
+    }
+
+    .header-game-view.in-game {
+        position: fixed;
+        top: 0;
+        width: 100%;
+    }
+
+    .game-view-mobile.in-game {
+       position: fixed;
+       top: 57px;
+    }
+
+    .game-frame {
+        flex: 1;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+
+    .game-frame iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+    }
+
+    .bloco-relatedGames {
+        margin-top: 40px;
     }
 }
 
@@ -211,7 +256,6 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 10px;
-        z-index: 1000;
     }
 
     .game-view-mobile {
@@ -224,7 +268,7 @@
         top: 0;
         width: 100%;
     }
-    
+
     .game-view-mobile.in-game {
        position: fixed;
        top: 57px;
@@ -254,7 +298,6 @@
         font-size: 16px;
     }
 
-
     .game-frame {
         flex: 1;
         justify-content: center;
@@ -266,7 +309,7 @@
 
     .game-frame iframe {
         width: 100%;
-        height: 100%;
+        height: calc(100% - 57px);
         border: none;
     }
 
@@ -383,6 +426,30 @@
     .bloco {
         padding: 0 10px 24px 10px
     }
+
+    #deposit-btn{
+        display: flex;
+        margin-top: .5rem;
+        max-height: 23px;
+        background-color: var(--highlight);
+        color: var(--foreground-highlight);
+        width: 82px;
+        padding: 7px 10px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 2px;
+        font-size: 12px;
+    }
+
+    .btn-custom, .btn-custom2 {
+        min-width: 230px;
+    }
+
+    .btn-custom2 {
+        margin-top: 1rem;
+    }
 }
 
 @media (min-width: 483px){
@@ -495,7 +562,6 @@
         border-radius: 4px 4px 0px 0px;
         background-color: #0A0A0A;
         border: none;
-        margin: 0 20px;
         border: 1px solid #1B1B1B;
         max-height: 45px;
     }
@@ -680,4 +746,40 @@
         color: var(--foreground-header);
         flex-grow: 1;
     }
+
+    .game-view.is-tablet {
+        height: 100%;
+    }
+
+    .game-view.desktop-fullscreen.is-tablet {
+        height: 100% !important;
+    }
+
+    .header-game-view.is-tablet {
+        margin: 0;
+    }
+
+    .game-frame.is-tablet {
+        margin: 0;
+        height: 600px;
+    }
+
+    .game-frame.in-game-is-tablet {
+        .game-view.in-game {
+            padding: 0;
+        }
+    }
+}
+
+.modal-header{
+    display: flex;
+    justify-content: end;
+    border: none;
+}
+
+.modal-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 60px 60px 60px;
 }
