--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -9,18 +9,19 @@
             </ng-template>
         </div>
         <div *ngIf="isLoggedIn || gameMode != 'REAL'" class="buttons-game-view">
-            <ng-container > <!-- Lembrar de colocar a validacao correta! -->
+            <ng-container *ngIf="isLoggedIn && gameMode === 'REAL'">
                 <button class="btn" id="deposit-btn" (click)="openDeposit()">Depositar</button> 
             </ng-container>
             <ng-container>
-                <a class="btn-cassino screen-adjust" (click)="openFullScreenMob()"><i class="fa fa-expand"></i></a>
+                <a *ngIf="!fullscreen" class="btn-cassino screen-adjust" (click)="openFullScreenMob()"><i class="fa fa-expand"></i></a>
+                <a *ngIf="fullscreen" class="btn-cassino screen-adjust" (click)="exitFullscreenMob()"><i class="fa fa-compress"></i></a>
             </ng-container>
             <a (click)="back()" class="btn-cassino game-close"><i class="fa fa-times"></i></a>
         </div>
     </div>
     <ng-container>
         <div class="game-view-mobile" [ngClass]="{ 'in-game': isLoggedIn || gameMode !== 'REAL' }" *ngIf="isLoggedIn || gameMode != 'REAL'" >
-            <div class="game-frame">
+            <div class="game-frame" >
                 <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
                 <ng-container *ngIf="mobileScreen">
                     <iframe *ngIf="gameUrl!=''"  [src]="gameUrl"></iframe>
@@ -62,8 +63,11 @@
     </ng-container>
 </div>
 
-<div class="game-view" [ngClass]="{ 'in-game': isLoggedIn || gameMode !== 'REAL' }" *ngIf="isDesktop">
-    <div class="header-game-view" [ngClass]="{ 'in-game': isLoggedIn || gameMode !== 'REAL' }">
+<div class="game-view" 
+    *ngIf="isDesktop" 
+    [ngClass]="{ 'in-game': isLoggedIn || gameMode !== 'REAL', 'is-tablet': isTablet }"
+>
+    <div class="header-game-view" [ngClass]="{ 'in-game': isLoggedIn || gameMode !== 'REAL', 'is-tablet': isTablet }">
         <div class="game-name">
             <ng-container *ngIf="gameFornecedor == 'galaxsys'; else nomeOficialGame">
                 <span> {{ customCasinoName }} Galaxsys </span>
@@ -73,15 +77,19 @@
             </ng-template>
         </div>
         <div class="buttons-game-view">
-            <ng-container *ngIf="!isAppMobile() && !removerBotaoFullscreen">
+            <ng-container *ngIf="!isTablet">
                     <a *ngIf="!fullscreen" class="btn-cassino screen-adjust" (click)="openFullscreen()"><i class="fa fa-expand"></i></a>
                     <a *ngIf="fullscreen" class="btn-cassino screen-adjust" (click)="closeFullscreen()"><i class="fa fa-compress"></i></a>
             </ng-container>
+            <ng-container *ngIf="isTablet">
+                <a *ngIf="!fullscreen" class="btn-cassino screen-adjust" (click)="openFullscreen()"><i class="fa fa-expand"></i></a>
+                <a *ngIf="fullscreen" class="btn-cassino screen-adjust" (click)="closeFullscreen()"><i class="fa fa-compress"></i></a>
+        </ng-container>
             <a (click)="back()" class="btn-cassino game-close"><i class="fa fa-times"></i></a>
         </div>
     </div>
     <ng-container>
-        <div *ngIf="isLoggedIn || gameMode != 'REAL'" class="game-frame in-game">
+        <div *ngIf="isLoggedIn || gameMode != 'REAL'" class="game-frame in-game" [ngClass]="{ 'is-tablet': isTablet }">
             <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
             <ng-container *ngIf="mobileScreen">
                 <iframe *ngIf="gameUrl!=''"  [src]="gameUrl"></iframe>
@@ -91,7 +99,7 @@
             </ng-container>
         </div>
 
-        <div *ngIf="!isLoggedIn && gameMode == 'REAL'" class="game-frame">
+        <div *ngIf="!isLoggedIn && gameMode == 'REAL'" class="game-frame" [ngClass]="{ 'is-tablet': isTablet }">
             <div class="overlay overlay--unauthorized">
                 <div class="overlay-background" [style.backgroundImage]="'url(' + backgroundImageUrl + ')'"></div>
                 <div class="overlay-content -mt-4 p-5">
@@ -109,49 +117,31 @@
             </div>
         </div>
     </ng-container>
-
-    <ng-container>
-        <div *ngIf="avisoCancelarBonus" class="game-frame">
-            <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
-            <ng-container *ngIf="mobileScreen">
-                <iframe *ngIf="gameUrl!=''"  [src]="gameUrl"></iframe>
-            </ng-container>
-            <ng-container *ngIf="!mobileScreen">
-                <iframe *ngIf="gameUrl!=''"  [src]="gameUrl" allowfullscreen></iframe>
-            </ng-container>
-
-        </div>
-        <div *ngIf="avisoCancelarBonus" class="game-frame" style="overflow: hidden">
-            <div class="overlay overlay--unauthorized">
-                <div class="overlay-background" [style.backgroundImage]="'url(' + backgroundImageUrl + ')'">
-                </div>
-                <div class="overlay-content -mt-4 p-5">
-                </div>
-            </div>
-        </div>
-        <ng-template #continuarJogandoModal let-modal>
-            <div class="modal-header">
-                <a class="close-modal-continuar-jogando" aria-label="Close" (click)="back()">
-                    <i class="fa fa-times" aria-hidden="true"></i>
-                </a>
-            </div>
-            <div class="modal-body">
-                <h4>Continuar Jogando...</h4>
-                <p>
-                    Seu bônus está quase acabando! Deseja cancelar seu saldo bônus e trocar para o seu saldo real para continuar jogando?
-                </p>
-                <a class="btn btn-custom" (click)="continuarSaldoReal()">
-                  Sim, cancelar bônus e usar saldo real
-                </a>
-                <a class="btn btn-custom2 " (click)="continuarBonus()">
-                  Continuar com bônus
-                </a>
-            </div>
-        </ng-template>
-    </ng-container>
 </div>
 
-<div class="bloco" *ngIf="(isDesktop || isMob) && !isLoggedIn && gameMode == 'REAL'">
+<ng-container>
+    <ng-template #continuarJogandoModal let-modal>
+        <div class="modal-header">
+            <a class="close-modal-continuar-jogando" aria-label="Close" (click)="back()">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </a>
+        </div>
+        <div class="modal-body">
+            <h4>Continuar Jogando...</h4>
+            <p>
+                Seu bônus está quase acabando! Deseja cancelar seu saldo bônus e trocar para o seu saldo real para continuar jogando?
+            </p>
+            <a class="btn btn-custom" (click)="continuarSaldoReal()">
+              Sim, cancelar bônus e usar saldo real
+            </a>
+            <a class="btn btn-custom2 " (click)="continuarBonus()">
+              Continuar com bônus
+            </a>
+        </div>
+    </ng-template>
+</ng-container>
+
+<div class="bloco bloco-relatedGames" *ngIf="(isDesktop || isMob) && !isLoggedIn && gameMode == 'REAL'">
     <app-wall-section
         sectionId="cassino"
         [title]="'cassino.jogosRelacionados' | translate"
@@ -182,7 +172,7 @@
     </div>
 </div>
 
-<div class="bloco" *ngIf="(isDesktop || isMob) && !isLoggedIn && gameMode == 'REAL'">
+<div class="bloco bloco-providers" *ngIf="(isDesktop || isMob) && !isLoggedIn && gameMode == 'REAL'">
     <app-wall-section
         sectionId="providers"
         [title]="'geral.provedores' | translate"
