--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -1051,3 +1051,10 @@ body .change-theme {
 #badge-xtremepush.show-badge {
     display: block;
 }
+
+.hidden-header {
+    display: none !important;
+    header-submenu {
+        display: none !important;
+    }
+}
