feat: ajustes de cores de acordo com a versão do android

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,6 +1,6 @@
 /* semantic color variables for this project */
 :root {
-  // --color-background: #0a0a0a;
+  --color-background: #0a0a0a;
   --color-primary: #0be58e;
   --color-text: #ffffff;
   --color-text-input: #ffffff80;
@@ -15,6 +15,6 @@
   --color-success: #6da544;
   --color-danger: #f61a1a;
   --color-warning: #c09516;
-  // --wb-warning: #f61a1a;
-  // --inputs-odds
+  --wb-warning: #f61a1a;
+  --inputs-odds: #003566;
 }
