--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -143,6 +143,12 @@
     font-size: medium;
 }
 
+@media only screen and (max-width: 1024px) {
+    .game-view {
+        z-index: 10000;
+    }
+}
+
 @media only screen and (min-width:482px) and (max-width: 1024px) {
     .provider-list {
         flex-wrap: nowrap;
@@ -775,6 +781,7 @@
     display: flex;
     justify-content: end;
     border: none;
+    z-index: 9001 !important;
 }
 
 .modal-body{
