feat: paleta de cores

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -12,9 +12,13 @@
   --highlight: #ca7d40;
   --header: #001d3d;
   --background: #021126;
-  --color-success: #6da544;
-  --color-danger: #f61a1a;
-  --color-warning: #c09516;
   --wb-warning: #f61a1a;
   --inputs-odds: #003566;
+  --foreground-inputs-odds: #000000;
+  --color-danger: #f61a1a;
+  --color-warning: #c09516;
+  --color-success: #6da544;
+  --foreground-game:#ffffff;
+  --foreground-league: #000000;
+
 }
